--- a/src/main/resources/templates/ess_page.html
+++ b/src/main/resources/templates/ess_page.html
@@ -59,26 +59,24 @@
                 <div class="container mt-4 px-5">
                     <div class="row">
                         <div class="col-5">
-                            <div class="card">
+                            <div class="card h-100">
                                 <h6 class="m-3 font-weight-bold text-black-50">내부 환경 정보</h6>
                                 <div class="card-body">
                                     <div class="row justify-content-center">
                                         <div class="col-md-3">
                                             <div class="row text-center">
-                                                <i class="bi bi-thermometer-half fs-3"></i>
+                                                <i id="temp" class="bi bi-thermometer-half fs-3 normal"></i>
                                             </div>
-                                            <div class="row justify-content-center">좋음</div>
-                                            <div class="row justify-content-center">15.86℃</div>
+                                            <div class="row justify-content-center">[[${th.data1}]] ℃</div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="row text-center">
-                                                <i class="bi bi-droplet-half fs-3"></i>
+                                                <i id="humi" class="bi bi-droplet-half fs-3 normal"></i>
                                             </div>
-                                            <div class="row justify-content-center">좋음</div>
-                                            <div class="row justify-content-center">43.71%</div>
+                                            <div class="row justify-content-center">[[${th.data2}]] %</div>
                                         </div>
                                         <div>
-                                            <table class="table text-center mt-3">
+                                            <table class="table text-center mt-3 align-middle">
                                                 <thead>
                                                 <tr>
                                                     <th scope="col"></th>
@@ -89,18 +87,18 @@
                                                 <tbody>
                                                 <tr>
                                                     <th scope="row"><div class="rounded" style="width: 20px; height: 20px; background-color: red;"></div></th>
-                                                    <td>60℃ 이상</td>
-                                                    <td>60％ 이상</td>
+                                                    <td>36℃ 이상</td>
+                                                    <td>70％ 이상</td>
                                                 </tr>
                                                 <tr>
                                                     <th scope="row"><div class="rounded" style="width: 20px; height: 20px; background-color: darkorange;"></div></th>
-                                                    <td>48℃이상 60℃ 미만</td>
-                                                    <td>48％이상 60％ 미만</td>
+                                                    <td>31℃이상 36℃ 미만</td>
+                                                    <td>60％이상 70％ 미만</td>
                                                 </tr>
                                                 <tr>
                                                     <th scope="row"><div class="rounded" style="width: 20px; height: 20px; background-color: mediumseagreen;"></div></th>
-                                                    <td>48℃ 미만</td>
-                                                    <td>48％ 미만</td>
+                                                    <td>36℃ 미만</td>
+                                                    <td>60％ 미만</td>
                                                 </tr>
                                                 </tbody>
                                             </table>
@@ -110,7 +108,7 @@
                             </div>
                         </div>
                         <div class="col-7 ps-5">
-                            <div class="card">
+                            <div class="card h-100">
                                 <h6 class="m-3 font-weight-bold text-black-50">ESS SAFETY STATUS</h6>
                                 <div class="card-body text-center">
                                     <img src="../asset/images/s-images/sms.png" style="width: 356px;" class="mb-3">
@@ -120,30 +118,30 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-5">
-                            <div class="card">
+                            <div class="card h-100">
                                 <h6 class="m-3 font-weight-bold text-black-50">유해가스</h6>
                                 <div class="card-body">
-                                    <table class="table text-center fs-6 mt-2 mb-3">
+                                    <table class="table text-center fs-6 mt-2 align-middle h-100">
                                         <tbody>
                                         <tr>
-                                            <th scope="row">VOC</th>
-                                            <td><p>43.0</p></td>
-                                            <td><p>ppm</p></td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">NH3</th>
-                                            <td><p>2.35</p></td>
-                                            <td><p>ppm</p></td>
-                                        </tr>
-                                        <tr>
                                             <th scope="row">CO2</th>
-                                            <td><p>13.0</p></td>
-                                            <td><p>ppm</p></td>
+                                            <td>[[${co2.data1}]]</td>
+                                            <td>ppm</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">CO</th>
-                                            <td><p>125.72</p></td>
-                                            <td><p>ppm</p></td>
+                                            <td>[[${co.data1}]]</td>
+                                            <td>ppm</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">H2</th>
+                                            <td>[[${h2.data1}]]</td>
+                                            <td>ppm</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">VOC</th>
+                                            <td>[[${voc.data1}]]</td>
+                                            <td>ppm</td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -151,23 +149,31 @@
                             </div>
                         </div>
                         <div class="col-7 ps-5">
-                            <div class="card">
+                            <div class="card h-100">
                                 <h6 class="m-3 font-weight-bold text-black-50">BATTERY STATUS</h6>
                                 <div class="card-body">
                                     <div class="card-body">
-                                        <table class="table text-center fs-6 align-middle">
+                                        <table class="table text-center fs-6 align-middle" style="height: 20vh ;table-layout: fixed">
                                             <tbody>
                                             <tr>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/volt_icon.png"><p>전압</p></th>
-                                                <td><span>43.33 (V)</span></td>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/ampere_icon.png"><p>전류</p></th>
-                                                <td><p>2.35</p></td>
+                                                <th scope="row"><img style="width: 40px" src="../asset/images/s-images/volt_icon.png"></th>
+                                                <td>전압</td>
+                                                <td>[[${bat.voltage}]]</td>
+                                                <td>V</td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/ampere_icon.png"></th>
+                                                <td>전류</td>
+                                                <td>[[${bat.current}]]</td>
+                                                <td>A</td>
                                             </tr>
                                             <tr>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/charge_icon.png"><p>충전량</p></th>
-                                                <td><p>13.0</p></td>
-                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/discharge_icon.png"><p>방전량</p></th>
-                                                <td><p>13.0</p></td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/charge_icon.png"></th>
+                                                <td>충전량</td>
+                                                <td>[[${bat.charge}]]</td>
+                                                <td>kWh</td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/discharge_icon.png"></th>
+                                                <td>방전량</td>
+                                                <td>[[${bat.discharge}]]</td>
+                                                <td>kWh</td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -220,7 +226,31 @@
 <!-- Clock -->
 <script src="../js/clock.js"></script>
 <script src="../js/scripts.js"></script>
+<script th:inline="javascript">
+    let temp = [[${th.data1}]];
+    let humi = [[${th.data2}]];
 
+    function statusth(){
+
+        if(temp >= 36){
+            document.getElementById('temp').className = 'bi bi-thermometer-half fs-3 fault';
+        }else if(temp < 31){
+            document.getElementById('temp').className = 'bi bi-thermometer-half fs-3 normal';
+        }else{
+            document.getElementById('temp').className = 'bi bi-thermometer-half fs-3 warning';
+        }
+
+        if(humi >= 70){
+            document.getElementById('humi').className = 'bi bi-droplet-half fs-3 fault';
+        }else if(humi < 60){
+            document.getElementById('humi').className = 'bi bi-droplet-half fs-3 normal';
+        }else{
+            document.getElementById('humi').className = 'bi bi-droplet-half fs-3 warning';
+        }
+
+    }
+    $(document).ready(statusth());
+</script>
 </body>
 
 </html>
