--- a/src/main/resources/templates/transport.html
+++ b/src/main/resources/templates/transport.html
@@ -140,9 +140,9 @@
                                     </tr>
                                     <tr>
                                         <th>일산화탄소</th>
-                                        <td>10ppm 미만</td>
-                                        <td>10ppm ~ 25ppm</td>
-                                        <td>25ppm 초과</td>
+                                        <td>50ppm 미만</td>
+                                        <td>100ppm ~ 200ppm</td>
+                                        <td>200ppm 초과</td>
                                     </tr>
                                     <!--                                    <tr>
                                                                             <th>수소</th>
@@ -156,13 +156,13 @@
                         </i>
                     </div>
                     <div class="status-div-info">
-                        <div id="normal" class="status-info null fw-bolder">안전</div>
+                        <div id="normal" class="status-info null-info fw-bolder">안전</div>
                     </div>
                     <div class="status-div-info">
-                        <div id="warning" class="status-info null fw-bolder">주의</div>
+                        <div id="warning" class="status-info null-info fw-bolder">주의</div>
                     </div>
                     <div class="status-div-info">
-                        <div id="fault" class="status-info null fw-bolder">위험</div>
+                        <div id="fault" class="status-info null-info fw-bolder">위험</div>
                     </div>
                 </div>
             </div>
