--- a/src/main/resources/templates/storage_page.html
+++ b/src/main/resources/templates/storage_page.html
@@ -222,7 +222,7 @@
                             <div class="card shadow mb-4">
                                 <h6 class="m-3 font-weight-bold text-black-50">온습도</h6>
                                 <i class="position-absolute fs-6 bi bi-question-circle mt-2 safety-th">
-                                    <div>
+                                    <div class="position-absolute">
                                         <table>
                                             <tbody>
                                             <tr>
