--- a/src/main/resources/templates/transport.html
+++ b/src/main/resources/templates/transport.html
@@ -121,7 +121,7 @@
                 <div class="bg-primary mt-4 p-4 w-100 rounded">
                     <div class="rounded text-start pb-4">
                         <p class="d-inline-grid fs-5 fw-bold w-100 text-body">배터리 안전 상태</p>
-                        <i id="safety-line" class="position-absolute fs-6 bi bi-question-circle">
+                        <i class="position-absolute fs-6 bi bi-question-circle safety-line">
                             <div>
                                 <img src="../asset/images/s-images/status_line.png" style="width: 80%; margin-left: 20%;">
                                 <table>
