--- a/src/main/resources/templates/transport.html
+++ b/src/main/resources/templates/transport.html
@@ -82,15 +82,15 @@
                         <tbody>
                         <tr>
                             <th>온도</th>
-                            <td><p id="temp">[[${tests.temp}]] ℃</p></td>
+                            <td><p id="t_temp">[[${tests.temp}]] ℃</p></td>
                         </tr>
                         <tr>
                             <th>습도</th>
-                            <td><p id="humi">[[${tests.humi}]] ％</p></td>
+                            <td><p id="t_humi">[[${tests.humi}]] ％</p></td>
                         </tr>
                         <tr>
                             <th>CO</th>
-                            <td><p id="co">[[${#numbers.formatDecimal(tests.co/20, 1, 2)}]]</p></td>
+                            <td><p id="t_co">[[${#numbers.formatDecimal(tests.co/20, 1, 2)}]]</p></td>
                         </tr>
                         <!--                        <tr>
                                                     <th>H2</th>
