--- a/src/main/resources/static/theme/css/style.css
+++ b/src/main/resources/static/theme/css/style.css
@@ -654,7 +654,7 @@
 }
 
 .normal{color: limegreen;}
-.normal-info{background-coㅊlor: #2CB86D;}
+.normal-info{background-color: #2CB86D;}
 .warning{color: darkorange;}
 .warning-info{background-color: #F49D34;}
 .fault{color: red;}
