--- a/src/main/resources/templates/ess_page.html
+++ b/src/main/resources/templates/ess_page.html
@@ -228,29 +228,46 @@
 <script src="../js/scripts.js"></script>
 <script src="../js/sens_data.js"></script>
 <script th:inline="javascript">
-    let temp = [[${th.data1}]];
-    let humi = [[${th.data2}]];
 
-    function statusth(){
+    function status1() {
+        $('#e_temp').load(location.href+' #e_temp');
+        $('#e_humi').load(location.href+' #e_humi');
 
-        if(temp >= 36){
-            document.getElementById('i_temp').className = 'bi bi-thermometer-half fs-3 fault';
-        }else if(temp < 31){
-            document.getElementById('i_temp').className = 'bi bi-thermometer-half fs-3 normal';
-        }else{
-            document.getElementById('i_temp').className = 'bi bi-thermometer-half fs-3 warning';
-        }
+        $.ajax({
+            url: "/data1",  // 데이터를 가져올 URL
+            success: function(data) {  // 요청이 성공한 경우 호출되는 함수
+                var temp = data.data1;  // 받아온 데이터 중 온도 값
+                var humi = data.data2;  // 받아온 데이터 중 습도 값
 
-        if(humi >= 70){
-            document.getElementById('i_humi').className = 'bi bi-droplet-half fs-3 fault';
-        }else if(humi < 60){
-            document.getElementById('i_humi').className = 'bi bi-droplet-half fs-3 normal';
-        }else{
-            document.getElementById('i_humi').className = 'bi bi-droplet-half fs-3 warning';
-        }
+                if(temp >= 36){
+                    document.getElementById('i_temp').className = 'bi bi-thermometer-half fs-3 fault';
+                }else if(temp < 31){
+                    document.getElementById('i_temp').className = 'bi bi-thermometer-half fs-3 normal';
+                }else{
+                    document.getElementById('i_temp').className = 'bi bi-thermometer-half fs-3 warning';
+                }
+
+                if(humi >= 70){
+                    document.getElementById('i_humi').className = 'bi bi-droplet-half fs-3 fault';
+                }else if(humi < 60){
+                    document.getElementById('i_humi').className = 'bi bi-droplet-half fs-3 normal';
+                }else{
+                    document.getElementById('i_humi').className = 'bi bi-droplet-half fs-3 warning';
+                }
+
+            },
+            error: function() {  // 요청이 실패한 경우 호출되는 함수
+                console.log("데이터를 가져오는 데 실패했습니다.");
+            }
+        });
 
     }
-    $(document).ready(statusth());
+
+    $(document).ready(function() {
+        status1();
+        setInterval(status1, 5000);
+    });
+
 </script>
 </body>
 
